--- a/index.html
+++ b/index.html
@@ -51,5 +51,6 @@
         <a href="#" class="navbar__toggleBtn">
             <i class="fas fa-bars"></i>
         </a>
+    </nav>
 </body>
 </html>
